@@ -3451,9 +3451,7 @@ pl_with_mutex(term_t mutex, term_t goal)
   pl_mutex_unlock(mutex);
 
   if ( !rval && ex )
-  { Word e = valTermRef(ex);
-
-    SECURE(checkData(e));
+  { SECURE(checkData(valTermRef(ex)));
     PL_raise_exception(ex);
   }
 
